[gd_scene load_steps=3 format=3 uid="uid://y3vtx0e0shv4"]

[ext_resource type="PackedScene" uid="uid://wny2d8dvp3ok" path="res://addons/maaacks_game_template/base/scenes/overlaid_menu/overlaid_menu.tscn" id="1_nknag"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/extras/scenes/overlaid_menus/level_won_menu.gd" id="2_klq7f"]

[node name="LevelWonMenu" instance=ExtResource("1_nknag")]
process_mode = 3
script = ExtResource("2_klq7f")
pauses_game = true

[node name="MenuPanelContainer" parent="." index="1"]
custom_minimum_size = Vector2(410, 240)

[node name="TitleMargin" parent="MenuPanelContainer/MarginContainer/BoxContainer" index="0"]
visible = false

[node name="DescriptionMargin" parent="MenuPanelContainer/MarginContainer/BoxContainer" index="1"]
visible = true
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="DescriptionLabel" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin" index="0"]
text = "[center]Level complete![/center]"
scroll_active = false

[node name="MenuButtons" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin" index="0"]
vertical = false

[node name="MainMenuButton" type="Button" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "Main Menu"

[node name="RestartButton" type="Button" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "Restart"

[node name="CloseButton" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="2"]
text = "Continue"

[node name="ConfirmMainMenu" type="ConfirmationDialog" parent="." index="2"]
auto_translate_mode = 1
initial_position = 2
dialog_text = "Go back to main menu?"

[connection signal="pressed" from="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="confirmed" from="ConfirmMainMenu" to="." method="_on_confirm_main_menu_confirmed"]
